# dema-test

./: .dockerignore  .env.example  .pre-commit-config.yaml  Makefile  README.md  analytics.sql  docker-compose.yaml  pyproject.toml
migrations/: env.py
migrations/versions/: adfc229e249e_staging_tables.py
src/: main.py  settings.py
src/schemas/: raw.py
src/tasks/: ingest.py  transform.py
